tests/errors/program_variable.f90
program program_variable
integer bar
bar = foo
end program
